--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -9,6 +9,7 @@ Min.tripForm.availableVolume=Volumen minimo es 1m3.
 Size.tripForm.cargoType=Seleccione una opcion.
 Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
+Min.tripForm.price=Precio debe ser positivo.
 
 
 
