--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -4,12 +4,12 @@ Size.tripForm.name=Nombre demasiado corto.
 Pattern.tripForm.id=No es un cuit valido.
 Pattern.tripForm.email=Email invalido.
 Pattern.tripForm.licensePlate=Patente incorrecta.
-Min.tripForm.availableWeight=El peso minimo es 50kg.
-Min.tripForm.availableVolume=Volumen minimo es 1m3.
+Pattern.tripForm.availableWeight=El peso minimo es 50kg.
+Pattern.tripForm.availableVolume=Volumen minimo es 1m3.
 Size.tripForm.cargoType=Seleccione una opcion.
 Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
-Min.tripForm.price=Precio debe ser positivo.
+Pattern.tripForm.price=Precio debe ser positivo.
 
 
 
