--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,15 +1,20 @@
-Size=Largo incorrecto
 
+#Spring Errors
+Size=Largo incorrecto
 Size.tripForm.name=Nombre demasiado corto.
 Pattern.tripForm.id=No es un cuit valido.
 Pattern.tripForm.email=Email invalido.
 Pattern.tripForm.licensePlate=Patente incorrecta.
-Pattern.tripForm.availableWeight=El peso minimo es 50kg.
-Pattern.tripForm.availableVolume=Volumen minimo es 1m3.
-Size.tripForm.cargoType=Seleccione una opcion.
+Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
+Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
+Size.tripForm.cargoType=Seleccione una opción.
 Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser positivo.
+
+#Landing page
+LandingMainMessage=Tu socio de confianza para el transporte de carga.
+LandingMainSubMessage=Optimizá la logística de tus envíos con nuestra plataforma intuitiva y fácil de usar, que te permite ver el perfil de los transportistas, coordinar envíos y comunicarte con ellos.
 
 
 
