feat: i18n index + navbar + footer

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -12,10 +12,19 @@ Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser positivo.
 
-#Landing page
+#navbar
+Explore=Explorar
+CreateTrip=Crear Viaje
+
+#index.jsp
 LandingMainMessage=Tu socio de confianza para el transporte de carga.
 LandingMainSubMessage=Optimizá la logística de tus envíos con nuestra plataforma intuitiva y fácil de usar, que te permite ver el perfil de los transportistas, coordinar envíos y comunicarte con ellos.
-
+TrustworthyTruckers=Transportistas confiables.
+TrustworthyTruckersMessage=Trabajamos con una amplia seleccion de transportistas confiables para asegurarnos de que tu carga llegue a su destino final de manera segura y eficiente.
+EconomicSolutions=Soluciones económicas.
+EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes para que puedas comparar precios y seleccionar la que mejor se adapta a tu negocio.
+ExploitReturns=Capitalizá las vueltas!
+ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
 
 
 
