feat: accept error msg

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -12,6 +12,11 @@ Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser positivo.
 
+Size.acceptForm.name=Nombre demasiado corto.
+Pattern.acceptForm.cuit=No es un cuit valido.
+Pattern.acceptForm.email=Email invalido.
+
+
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
