--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -31,5 +31,35 @@ EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes p
 ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
 
+#common
+Name=Name
+Cuit=Cuit/Cuil
+Email=Email
+Origin=Origen
+Destination=Destino
+DepartureDate=Fecha de salida
+ArrivalDate=Fecha de llegada
+Price=Precio
+AvailableVolume=Volumen Disponible
+AvailableWeight=Peso Disponible
+
+#createTrip.jsp
+CreateTripLicensePlate=Patente
+CreateTripCargoType=Tipo de carga
+CreateTripCargoTypeNormal=Normal
+CreateTripCargoTypeHazardous=Peligrosa
+CreateTripCargoTypeRefrigerated=Refrigerada
+
+#filters.tag
+FiltersMinPrice=Precio Min
+FiltersMaxPrice=Precio Max
+FiltersDeparture=Salida
+FiltersArrival=Llegada
+FiltersSortBy=Ordenar por
+FiltersMinVolume=Volumen Min
+FiltersMinWeight=Peso Min
+FiltersApply=Aplicar Filtros
+
+
 
 
