--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -19,6 +19,16 @@ Pattern.acceptForm.email=Invalid email.
 Explore=Explore
 CreateTrip=Create Trip
 
+#index.jsp
+LandingMainMessage=Your trustworthy partner for cargo transport.
+LandingMainSubMessage=Optimize your shipment's logistics with our intuitive platform. Communicate with drivers and coordinate shipments.
+TrustworthyTruckers=Trustworthy drivers.
+TrustworthyTruckersMessage=Our team is big! We count on trustworthy drivers to make sure your cargo gets to its destination safely and efficiently.
+EconomicSolutions=Inexpensive solutions.
+EconomicSolutionsMessage=We work with a wide variety of trip offers for you to compare prices and select your company's best fit.
+ExploitReturns=Capitalize on returns!
+ExploitReturnsMessage=Offer your truck's empty space and cash in on your trip's returns.
+
 #common
 Name=Name
 Cuit=Cuit/Cuil
