--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -16,6 +16,13 @@ Size.acceptForm.name=Nombre demasiado corto.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
 
+#tripDetails.jsp
+Details=Detalles
+ReserveTrip=Reservar Viaje
+NamePlaceholder=Pedro Gonzales
+EmailPlaceHolder=ejemplo@gmail.com
+Reserve=Reserve
+
 
 #navbar
 Explore=Explorar
@@ -36,12 +43,15 @@ Name=Name
 Cuit=Cuit/Cuil
 Email=Email
 Origin=Origen
+LicensePlate=Patente
 Destination=Destino
 DepartureDate=Fecha de salida
 ArrivalDate=Fecha de llegada
 Price=Precio
 AvailableVolume=Volumen Disponible
 AvailableWeight=Peso Disponible
+Filters=Filtros
+Driver=Conductor
 
 #createTrip.jsp
 CreateTripLicensePlate=Patente
