--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -25,12 +25,22 @@ Cuit=Cuit/Cuil
 Email=Email
 Origin=Origin
 Destination=Destination
+LicensePlate=License Plate
 DepartureDate=Departure Date
 ArrivalDate=Arrival Date
 Price=Price
 AvailableVolume=Available Volume
 AvailableWeight=Available Weight
 Filters=Filters
+Driver=Driver
+
+
+#tripDetails.jsp
+Details=Details
+ReserveTrip=Reserve Trip
+NamePlaceholder=John Doe
+EmailPlaceHolder=example@gmail.com
+Reserve=Reserve
 
 #createTrip.jsp
 CreateTripLicensePlate=License plate
