--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -22,6 +22,10 @@ ReserveTrip=Reservar Viaje
 NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
+TripDetails=Detalles del viaje
+
+#register.jsp
+Register=Registrate
 
 
 #navbar
@@ -53,6 +57,10 @@ AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
 
+#browseTrips.jsp
+OriginDestination=Origen - Destino
+Dates=Fecha partida -  Fecha llegada
+
 #createTrip.jsp
 CreateTripLicensePlate=Patente
 CreateTripCargoType=Tipo de carga
@@ -70,6 +78,10 @@ FiltersMinVolume=Volumen Min
 FiltersMinWeight=Peso Min
 FiltersApply=Aplicar Filtros
 
-
+#errors
+404Error=Error 404
+404ErrorCode=404 - {0} no encontrado
+TryAgain=Por favor intente nuevamente. En caso de persistir el error contactar soporte.
+GoBack=Volver atrás
 
 
