ft: 500 error page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -83,5 +83,7 @@ FiltersApply=Aplicar Filtros
 404ErrorCode=404 - {0} no encontrado
 TryAgain=Por favor intente nuevamente. En caso de persistir el error contactar soporte.
 GoBack=Volver atrás
+500Error=Error 500
+500ErrorCode=500 - Error interno del servidor
 
 
