--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -70,4 +70,12 @@ FiltersMinVolume=Min Volume
 FiltersMinWeight=Min Weight
 FiltersApply=Apply Filters
 
+#errors
+404Error=Error 404
+404ErrorCode=404 - {0} not found
+TryAgain=Please try again. If the error persists, contact support.
+GoBack=Go Back
+500Error=Error 500
+500ErrorCode=500 - Internal Server Error
+
 
