refactor: error404 + error messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,10 +1,10 @@
 
 #Spring Errors
 Size=Largo incorrecto
-Size.tripForm.name=Nombre demasiado corto.
-Pattern.tripForm.id=No es un cuit valido.
-Pattern.tripForm.email=Email invalido.
-Pattern.tripForm.licensePlate=Patente incorrecta.
+Size.tripForm.name=El nombre debe tener más de 6 caracteres.
+Pattern.tripForm.id=CUIT/CUIL inválido: 00-00000000-0.
+Pattern.tripForm.email=Email inválido.
+Pattern.tripForm.licensePlate=Patente inválida.
 Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
 Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
 Size.tripForm.cargoType=Seleccione una opción.
