feat: date validation

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -11,7 +11,9 @@ Size.tripForm.cargoType=Seleccione una opción.
 Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser positivo.
-
+PreventPast.tripForm.departureDate=La fecha debe ser en el futuro
+PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro
+DateValidator.tripForm=La fecha de llegada debe ser posterior a la de salida
 Size.acceptForm.name=Nombre demasiado corto.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
