feat: errors + browse restyling + mini edits

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -39,8 +39,8 @@ LicensePlate=License Plate
 DepartureDate=Departure Date
 ArrivalDate=Arrival Date
 Price=Price
-AvailableVolume=Available Volume
-AvailableWeight=Available Weight
+AvailableVolume=Avl. Volume
+AvailableWeight=Avl. Weight
 Filters=Filters
 Driver=Driver
 
@@ -72,10 +72,11 @@ FiltersApply=Apply Filters
 
 #errors
 404Error=Error 404
-404ErrorCode=404 - {0} not found
+404TripMsg=Trip not found
 TryAgain=Please try again. If the error persists, contact support.
 GoBack=Go Back
 500Error=Error 500
 500ErrorCode=500 - Internal Server Error
+PageNotFound=Page not found
 
 
