refactor: friendlier error codes

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -1,7 +1,7 @@
 
 #Spring Errors
 Size=Largo incorrecto
-Size.tripForm.name=El nombre debe tener más de 6 caracteres.
+Size.tripForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.tripForm.id=CUIT/CUIL inválido: 00-00000000-0.
 Pattern.tripForm.email=Email inválido.
 Pattern.tripForm.licensePlate=Patente inválida.
@@ -10,13 +10,15 @@ Pattern.tripForm.availableVolume=Volumen mínimo es 1m3.
 Size.tripForm.cargoType=Seleccione una opción.
 Size.tripForm.origin=Ingrese origen.
 Size.tripForm.destination=Ingrese destino.
-Pattern.tripForm.price=Precio debe ser positivo.
+Pattern.tripForm.price=Precio debe ser mayor a 0.
 PreventPast.tripForm.departureDate=La fecha debe ser en el futuro
 PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro
 DateValidator.tripForm=La fecha de llegada debe ser posterior a la de salida
-Size.acceptForm.name=Nombre demasiado corto.
+Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
+NotNull.tripForm=Debe completar este campo
+NotNull.tripForm.cargoType=Seleccionar una opcion
 
 #tripDetails.jsp
 Details=Detalles
@@ -69,6 +71,7 @@ CreateTripCargoType=Tipo de carga
 CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Peligrosa
 CreateTripCargoTypeRefrigerated=Refrigerada
+Select=Seleccionar
 
 #filters.tag
 FiltersMinPrice=Precio Min
