--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -1,18 +1,18 @@
 #Spring Errors
 Size=Incorrect size.
-Size.tripForm.name=Name too short.
-Pattern.tripForm.id=Not a valid cuit.
+Size.tripForm.name=Name size should be between 6 and 100 characters.
+Pattern.tripForm.id=Invalid cuit.
 Pattern.tripForm.email=Invalid email.
-Pattern.tripForm.licensePlate=Incorrect license plate.
+Pattern.tripForm.licensePlate=Invalid license plate.
 Pattern.tripForm.availableWeight=Minimum weight is 50kg.
 Pattern.tripForm.availableVolume=Minimum volume is 1m3.
 Size.tripForm.cargoType=Select an option.
 Size.tripForm.origin=Enter origin.
 Size.tripForm.destination=Enter destination.
-Pattern.tripForm.price=Price should be a positive integer.
+Pattern.tripForm.price=Price should be a greater than 0.
 
-Size.acceptForm.name=Name too short.
-Pattern.acceptForm.cuit=Not a valid cuit.
+Size.acceptForm.name=Name size should be between 6 and 100 characters.
+Pattern.acceptForm.cuit=Invalid cuit.
 Pattern.acceptForm.email=Invalid email.
 
 #navbar
