feat: pagination frontend impl

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -64,6 +64,7 @@ Driver=Conductor
 #browseTrips.jsp
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
+NoTripsAvailable=No hay viajes disponibles.
 
 #createTrip.jsp
 CreateTripLicensePlate=Patente
