--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -52,6 +52,11 @@ NamePlaceholder=John Doe
 EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
 
+#browseTrips.jsp
+OriginDestination=Origin - Destination
+Dates=Departure date -  Arrival date
+NoTripsAvailable=No trips available.
+
 #createTrip.jsp
 CreateTripLicensePlate=License plate
 CreateTripCargoType=Cargo type
