feat: pagination improvements, max page and minor error page change

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -90,7 +90,7 @@ FiltersApply=Aplicar Filtros
 TryAgain=Por favor intente nuevamente. En caso de persistir el error contactar soporte.
 GoBack=Volver atrás
 500Error=Error 500
-500ErrorCode=500 - Error interno del servidor
+500ErrorCode=Error interno del servidor
 PageNotFound=Pagina no encontrada
 
 
