--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -81,7 +81,7 @@ FiltersApply=Apply Filters
 TryAgain=Please try again. If the error persists, contact support.
 GoBack=Go Back
 500Error=Error 500
-500ErrorCode=500 - Internal Server Error
+500ErrorCode=Internal Server Error
 PageNotFound=Page not found
 
 
