feat: success page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -93,4 +93,6 @@ GoBack=Volver atrás
 500ErrorCode=Error interno del servidor
 PageNotFound=Pagina no encontrada
 
+#Success
+TripCreated=Viaje creado con éxito
 
