--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -84,4 +84,7 @@ GoBack=Go Back
 500ErrorCode=Internal Server Error
 PageNotFound=Page not found
 
+#Success
+TripCreated=Trip created successfully!
+
 
