ft: Cargo type saved in english

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -63,6 +63,8 @@ CreateTripCargoType=Cargo type
 CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Hazardous
 CreateTripCargoTypeRefrigerated=Refrigerated
+Select=Select
+
 
 
 #filters.tag
