ft: Sort by language fix

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -83,6 +83,12 @@ FiltersSortBy=Ordenar por
 FiltersMinVolume=Volumen Min
 FiltersMinWeight=Peso Min
 FiltersApply=Aplicar Filtros
+FiltersSortPriceAsc=Precio (Asc)
+FiltersSortPriceDesc=Precio (Desc)
+FiltersSortDepartureDateAsc=Fecha de salida (Asc)
+FiltersSortDepartureDateDesc=Fecha de salida (Desc)
+FiltersSortArrivalDateAsc=Fecha de llegada (Asc)
+FiltersSortArrivalDateDesc=Fecha de salida (Desc)
 
 #errors
 404Error=Error 404
