--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -76,6 +76,12 @@ FiltersSortBy=Sort By
 FiltersMinVolume=Min Volume
 FiltersMinWeight=Min Weight
 FiltersApply=Apply Filters
+FiltersSortPriceAsc=Price (Asc)
+FiltersSortPriceDesc=Price (Desc)
+FiltersSortDepartureDateAsc=Departure Date (Asc)
+FiltersSortDepartureDateDesc=Departure Date (Desc)
+FiltersSortArrivalDateAsc=Arrival Date (Asc)
+FiltersSortArrivalDateDesc=Arrival Date (Desc)
 
 #errors
 404Error=Error 404
