--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -13,7 +13,10 @@ Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser mayor a 0.
 PreventPast.tripForm.departureDate=La fecha debe ser en el futuro
 PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro
-DateValidator.tripForm=La fecha de llegada debe ser posterior a la de salida
+PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro
+PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro
+DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida
+DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
 Size.acceptForm.name=El nombre debe tener entre 6 y 100 caracteres.
 Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
@@ -95,4 +98,7 @@ PageNotFound=Pagina no encontrada
 
 #Success
 TripCreated=Viaje creado con éxito
+
+#Crete Request
+CreateRequest=Crear Pedido
 
