feat: browseRequests, requestDetails, requestSuccess

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -98,7 +98,11 @@ PageNotFound=Pagina no encontrada
 
 #Success
 TripCreated=Viaje creado con éxito
+RequestCreated=Pedido creado con éxito
 
 #Crete Request
 CreateRequest=Crear Pedido
+
+#BrowseRequests
+NoRequestsAvailable=No hay pedidos disponibles.
 
