ft: added new filter for requests + word adjustments

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -85,6 +85,8 @@ FiltersArrival=Llegada
 FiltersSortBy=Ordenar por
 FiltersMinVolume=Volumen Min
 FiltersMinWeight=Peso Min
+FiltersMaxVolume=Volumen Max
+FiltersMaxWeight=Peso Max
 FiltersApply=Aplicar Filtros
 FiltersSortPriceAsc=Precio (Asc)
 FiltersSortPriceDesc=Precio (Desc)
@@ -108,10 +110,10 @@ RequestCreated=Pedido creado con éxito
 
 #Crete Request
 CreateRequest=Crear Pedido
+CreateRequestRequestedVolume=Volumen necesario
+CreateRequestRequestedWeight=Peso necesario
 
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
 
-#createRequests
-CreateRequest=Crear Pedido
 
