--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -75,6 +75,8 @@ FiltersArrival=Arrival
 FiltersSortBy=Sort By
 FiltersMinVolume=Min Volume
 FiltersMinWeight=Min Weight
+FiltersMaxWeight=Max Weight
+FiltersMaxVolume=Max Volume
 FiltersApply=Apply Filters
 FiltersSortPriceAsc=Price (Asc)
 FiltersSortPriceDesc=Price (Desc)
@@ -97,5 +99,10 @@ TripCreated=Trip created successfully!
 
 #createRequests
 CreateRequest=Create Request
+CreateRequestRequestedVolume=Requested Volume
+CreateRequestRequestedWeight=Requested Weight
+
+#BrowseRequests
+NoRequestsAvailable=No requests available.
 
 
