feat: send proposals + merge with previous stuff

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -106,9 +106,11 @@ PageNotFound=Pagina no encontrada
 
 #Success
 TripCreated=Viaje creado con éxito
+Trips.AcceptProposal=Aceptar Propuesta
 RequestCreated=Pedido creado con éxito
 
-#Crete Request
+
+#createRequests
 CreateRequest=Crear Pedido
 CreateRequestRequestedVolume=Volumen necesario
 CreateRequestRequestedWeight=Peso necesario
