--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -96,6 +96,7 @@ PageNotFound=Page not found
 
 #Success
 TripCreated=Trip created successfully!
+Trips.AcceptProposal=Accept
 
 #createRequests
 CreateRequest=Create Request
