--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -30,6 +30,7 @@ NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
 TripDetails=Detalles del viaje
+Create=Crear
 
 #register.jsp
 Register=Registrate
