feat: access denied page

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -102,6 +102,7 @@ TryAgain=Por favor intente nuevamente. En caso de persistir el error contactar s
 GoBack=Volver atrás
 500Error=Error 500
 500ErrorCode=Error interno del servidor
+403ErrorCode=Acceso denegado.
 PageNotFound=Pagina no encontrada
 
 #Success
