--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -92,6 +92,7 @@ TryAgain=Please try again. If the error persists, contact support.
 GoBack=Go Back
 500Error=Error 500
 500ErrorCode=Internal Server Error
+403ErrorCode=Forbidden.
 PageNotFound=Page not found
 
 #Success
