feat: logout button in navbar

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -31,8 +31,9 @@ EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
 TripDetails=Detalles del viaje
 
-#register.jsp
+#UserManagement
 Register=Registrate
+Logout=Cerrar Sesion
 
 
 #navbar
