--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -65,6 +65,9 @@ CreateTripCargoTypeHazardous=Hazardous
 CreateTripCargoTypeRefrigerated=Refrigerated
 Select=Select
 
+#UserManagement
+Register=Create Account
+Logout=Logout
 
 
 #filters.tag
