--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -23,7 +23,7 @@ Pattern.acceptForm.email=Email invalido.
 NotNull.tripForm=Debe completar este campo
 NotNull.tripForm.cargoType=Seleccionar una opcion
 
-#tripDetails.jsp
+#details.jsp
 Details=Detalles
 ReserveTrip=Reservar Viaje
 NamePlaceholder=Pedro Gonzales
@@ -66,12 +66,12 @@ AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
 
-#browseTrips.jsp
+#browse.jsp
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
 
-#createTrip.jsp
+#create.jsp
 CreateTripLicensePlate=Patente
 CreateTripCargoType=Tipo de carga
 CreateTripCargoTypeNormal=Normal
