--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -46,19 +46,19 @@ Driver=Driver
 Create=Create
 
 
-#tripDetails.jsp
+#details.jsp
 Details=Details
 ReserveTrip=Reserve Trip
 NamePlaceholder=John Doe
 EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
 
-#browseTrips.jsp
+#browse.jsp
 OriginDestination=Origin - Destination
 Dates=Departure date -  Arrival date
 NoTripsAvailable=No trips available.
 
-#createTrip.jsp
+#create.jsp
 CreateTripLicensePlate=License plate
 CreateTripCargoType=Cargo type
 CreateTripCargoTypeNormal=Normal
