ft: profile and user in navbar

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -110,4 +110,7 @@ CreateRequestRequestedWeight=Requested Weight
 #BrowseRequests
 NoRequestsAvailable=No requests available.
 
+#profile
+Profile=Profile
+
 
