--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -120,4 +120,9 @@ CreateRequestRequestedWeight=Peso necesario
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
 
+#profile
+Profile=Perfil
+
+
+
 
