ft: provider o trucker en navbar traducido

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -40,6 +40,8 @@ Logout=Cerrar Sesion
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
+Trucker=Camionero
+Provider=Proveedor
 
 #index.jsp
 LandingMainMessage=Tu socio de confianza para el transporte de carga.
@@ -123,6 +125,8 @@ NoRequestsAvailable=No hay pedidos disponibles.
 
 #profile
 Profile=Perfil
+
+
 
 
 
