--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -18,6 +18,8 @@ Pattern.acceptForm.email=Invalid email.
 #navbar
 Explore=Explore
 CreateTrip=Create Trip
+Trucker=Trucker
+Provider=Provider
 
 #index.jsp
 LandingMainMessage=Your trustworthy partner for cargo transport.
