ft: go back en success

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -104,6 +104,7 @@ PageNotFound=Page not found
 #Success
 TripCreated=Trip created successfully!
 Trips.AcceptProposal=Accept
+RequestCreated=Request created succesfully!
 
 #createRequests
 CreateRequest=Create Request
