feat: register validations

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -2,7 +2,7 @@
 #Spring Errors
 Size=Largo incorrecto
 Size.tripForm.name=El nombre debe tener entre 6 y 100 caracteres.
-Pattern.tripForm.id=CUIT/CUIL inválido: 00-00000000-0.
+Pattern.tripForm.id=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
 Pattern.tripForm.email=Email inválido.
 Pattern.tripForm.licensePlate=Patente inválida.
 Pattern.tripForm.availableWeight=El peso mínimo es 50kg.
@@ -22,6 +22,14 @@ Pattern.acceptForm.cuit=No es un cuit valido.
 Pattern.acceptForm.email=Email invalido.
 NotNull.tripForm=Debe completar este campo
 NotNull.tripForm.cargoType=Seleccionar una opcion
+alreadyExists=Usuario existente con este CUIT
+Size.userForm.name=El nombre debe tener entre 6 y 100 caracteres.
+Pattern.userForm.cuit=CUIT/CUIL inválido. Ejemplo: 20-12345678-1.
+Pattern.userForm.email=Email inválido.
+Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
+ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
+Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
+
 
 #details.jsp
 Details=Detalles
@@ -35,6 +43,7 @@ Create=Crear
 #UserManagement
 Register=Registrate
 Logout=Cerrar Sesion
+
 
 
 #navbar
