--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,14 @@ Pattern.tripForm.price=Price should be a greater than 0.
 Size.acceptForm.name=Name size should be between 6 and 100 characters.
 Pattern.acceptForm.cuit=Invalid cuit.
 Pattern.acceptForm.email=Invalid email.
+alreadyExists=A user with that CUIT already exists.
+Size.userForm.name=Name must be between 6 and 100 characters long.
+Pattern.userForm.cuit=Invalid CUIT/CUIL. Eg: 20-12345678-1.
+Pattern.userForm.email=Invalid email.
+Pattern.userForm.name=Invalid name. Eg: John Doe
+ConfirmPasswordValidation.userForm=Passwords must match.
+Size.userForm.password=Password must be between 6 and 100 characters long.
+NotNull.userForm.role=Select a role.
 
 #navbar
 Explore=Explore
