--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -43,6 +43,13 @@ Create=Crear
 #UserManagement
 Register=Registrate
 Logout=Cerrar Sesion
+ResetPassword=Reestablecer Contrasena
+ExpiredResetLink=El link de reestablecimiento de contrasena ha expirado.
+UsedResetLink=El link de reestablecimiento de contrasena ya fue utilizado.
+ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contrasena.
+ResetPasswordEmailSent=Email enviado
+SendResetPasswordEmail=Enviar email
+
 
 
 
