--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -79,6 +79,12 @@ Select=Select
 #UserManagement
 Register=Create Account
 Logout=Logout
+ResetPassword=Reset Password
+ExpiredResetLink=The reset link has expired. Please try again.
+UsedResetLink=
+ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
+ResetPasswordEmailSent=Email sent!
+SendResetPasswordEmail=Send Email
 
 
 #filters.tag
