ft: reserveSuccess en trips

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -129,6 +129,8 @@ PageNotFound=Pagina no encontrada
 TripCreated=Viaje creado con éxito
 Trips.AcceptProposal=Aceptar Propuesta
 RequestCreated=Pedido creado con éxito
+ReserveSuccess=Reserva pedida con éxito
+Description=Descripcion
 
 
 #createRequests
