--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -119,6 +119,8 @@ PageNotFound=Page not found
 TripCreated=Trip created successfully!
 Trips.AcceptProposal=Accept
 RequestCreated=Request created succesfully!
+ReserveSuccess=Reserve requested succesfully!
+Description=Description
 
 #createRequests
 CreateRequest=Create Request
