ft: myTrips/myRequests button

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -75,6 +75,7 @@ CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Hazardous
 CreateTripCargoTypeRefrigerated=Refrigerated
 Select=Select
+MyTrips=My Trips
 
 #UserManagement
 Register=Create Account
@@ -126,6 +127,7 @@ Description=Description
 CreateRequest=Create Request
 CreateRequestRequestedVolume=Requested Volume
 CreateRequestRequestedWeight=Requested Weight
+MyRequests=My Requests
 
 #BrowseRequests
 NoRequestsAvailable=No requests available.
