--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -96,6 +96,7 @@ CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Peligrosa
 CreateTripCargoTypeRefrigerated=Refrigerada
 Select=Seleccionar
+MyTrips=Mis Viajes
 
 #filters.tag
 FiltersMinPrice=Precio Min
@@ -137,6 +138,7 @@ Description=Descripcion
 CreateRequest=Crear Pedido
 CreateRequestRequestedVolume=Volumen necesario
 CreateRequestRequestedWeight=Peso necesario
+MyRequests=Mis Pedidos
 
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
