style: general styling

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -43,6 +43,7 @@ Create=Crear
 #UserManagement
 Register=Registrate
 Logout=Cerrar Sesion
+Login=Iniciar Sesion
 ResetPassword=Reestablecer Contrasena
 ExpiredResetLink=El link de reestablecimiento de contrasena ha expirado.
 UsedResetLink=El link de reestablecimiento de contrasena ya fue utilizado.
