--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -79,9 +79,10 @@ Select=Select
 #UserManagement
 Register=Create Account
 Logout=Logout
+Login=Login
 ResetPassword=Reset Password
-ExpiredResetLink=The reset link has expired. Please try again.
-UsedResetLink=
+ExpiredResetLink=The reset link has expired.
+UsedResetLink=This reset link has already been used.
 ResetPasswordEmailSentDetails=An email has been sent to your account with instructions to reset your password.
 ResetPasswordEmailSent=Email sent!
 SendResetPasswordEmail=Send Email
