feat: login errors

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -29,6 +29,7 @@ Pattern.userForm.email=Email inválido.
 Pattern.userForm.name=Nombre inválido. Ejemplo: Juan Pérez
 ConfirmPasswordValidation.userForm=Las contraseñas deben coincidir.
 Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
+LoginError=Credenciales inválidas
 
 
 #details.jsp
