--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -10,7 +10,6 @@ Size.tripForm.cargoType=Select an option.
 Size.tripForm.origin=Enter origin.
 Size.tripForm.destination=Enter destination.
 Pattern.tripForm.price=Price should be a greater than 0.
-
 Size.acceptForm.name=Name size should be between 6 and 100 characters.
 Pattern.acceptForm.cuit=Invalid cuit.
 Pattern.acceptForm.email=Invalid email.
@@ -22,6 +21,8 @@ Pattern.userForm.name=Invalid name. Eg: John Doe
 ConfirmPasswordValidation.userForm=Passwords must match.
 Size.userForm.password=Password must be between 6 and 100 characters long.
 NotNull.userForm.role=Select a role.
+LoginError=Invalid credentials
+
 
 #navbar
 Explore=Explore
