--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -41,6 +41,7 @@ Reserve=Reserve
 TripDetails=Detalles del viaje
 Create=Crear
 
+
 #UserManagement
 Register=Registrate
 Logout=Cerrar Sesion
@@ -53,13 +54,12 @@ ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
 
 
-
-
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
 Trucker=Camionero
 Provider=Proveedor
+
 
 #index.jsp
 LandingMainMessage=Tu socio de confianza para el transporte de carga.
@@ -70,6 +70,7 @@ EconomicSolutions=Soluciones económicas.
 EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes para que puedas comparar precios y seleccionar la que mejor se adapta a tu negocio.
 ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
+
 
 #common
 Name=Name
@@ -86,10 +87,12 @@ AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
 
+
 #browse.jsp
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
+
 
 #create.jsp
 CreateTripLicensePlate=Patente
@@ -99,6 +102,7 @@ CreateTripCargoTypeHazardous=Peligrosa
 CreateTripCargoTypeRefrigerated=Refrigerada
 Select=Seleccionar
 MyTrips=Mis Viajes
+
 
 #filters.tag
 FiltersMinPrice=Precio Min
@@ -148,8 +152,10 @@ NoRequestsAvailable=No hay pedidos disponibles.
 #profile
 Profile=Perfil
 
-
-
-
-
+#login
+NewToTruckr=Nuevo en Truckr?
+SignUpNow= Registrate ahora
+ForgotPassword= Olvidaste tu contraseña?
+Password= Contraseña
+RememberMe=Recuerdame
 
