--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -137,4 +137,12 @@ NoRequestsAvailable=No requests available.
 #profile
 Profile=Profile
 
+#login
+NewToTruckr=New to Truckr?
+SignUpNow=Sign up now
+ForgotPassword=Forgot your password?
+Password=Password
+RememberMe=Remember me
+
+
 
