--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -144,6 +144,12 @@ NoRequestsAvailable=No hay pedidos disponibles.
 #profile
 Profile=Perfil
 
+#profile
+NewToTruckr=Nuevo en Truckr?
+SignUpNow= Registrate ahora
+ForgotPassword= Olvidaste tu contraseña?
+Password= Contraseña
+RememberMe=Recuerdame
 
 
 
