--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -144,5 +144,8 @@ ForgotPassword=Forgot your password?
 Password=Password
 RememberMe=Remember me
 
-
+#CargoTypes
+Hazardous=Hazardous
+Normal=Normal
+Refrigerated=Refrigerated
 
