--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -151,6 +151,10 @@ ForgotPassword= Olvidaste tu contraseña?
 Password= Contraseña
 RememberMe=Recuerdame
 
+#CargoTypes
+Hazardous=Peligroso
+Normal=Normal
+Refrigerated=Refrigerado
 
 
 
