--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -159,3 +159,8 @@ ForgotPassword= Olvidaste tu contraseña?
 Password= Contraseña
 RememberMe=Recuerdame
 
+#CargoTypes
+Hazardous=Peligroso
+Normal=Normal
+Refrigerated=Refrigerado
+
