feat: i18n cargotypes in manageRequest and manageTrip + details

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -63,6 +63,8 @@ ReserveTrip=Reserve Trip
 NamePlaceholder=John Doe
 EmailPlaceHolder=example@gmail.com
 Reserve=Reserve
+CargoType=Cargo type
+
 
 #browse.jsp
 OriginDestination=Origin - Destination
