--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -40,6 +40,8 @@ EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
 TripDetails=Detalles del viaje
 Create=Crear
+CargoType=Tipo de carga
+
 
 #UserManagement
 Register=Registrate
