--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reserve
 TripDetails=Detalles del viaje
 Create=Crear
+CargoType=Tipo de carga
 
 
 #UserManagement
