feat: MyTrips impl + notifications

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -165,3 +165,6 @@ Hazardous=Peligroso
 Normal=Normal
 Refrigerated=Refrigerado
 
+#MyTrips/MyRequests
+ActiveTrips=Viajes Activos
+AcceptedTrips=Viajes Aceptados
