--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -55,13 +55,12 @@ ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
 
 
-
-
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
 Trucker=Camionero
 Provider=Proveedor
+
 
 #index.jsp
 LandingMainMessage=Tu socio de confianza para el transporte de carga.
@@ -72,6 +71,7 @@ EconomicSolutions=Soluciones económicas.
 EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes para que puedas comparar precios y seleccionar la que mejor se adapta a tu negocio.
 ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
+
 
 #common
 Name=Name
@@ -88,10 +88,12 @@ AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
 
+
 #browse.jsp
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
+
 
 #create.jsp
 CreateTripLicensePlate=Patente
@@ -100,6 +102,8 @@ CreateTripCargoTypeNormal=Normal
 CreateTripCargoTypeHazardous=Peligrosa
 CreateTripCargoTypeRefrigerated=Refrigerada
 Select=Seleccionar
+MyTrips=Mis Viajes
+
 
 #filters.tag
 FiltersMinPrice=Precio Min
@@ -133,12 +137,15 @@ PageNotFound=Pagina no encontrada
 TripCreated=Viaje creado con éxito
 Trips.AcceptProposal=Aceptar Propuesta
 RequestCreated=Pedido creado con éxito
+ReserveSuccess=Reserva pedida con éxito
+Description=Descripcion
 
 
 #createRequests
 CreateRequest=Crear Pedido
 CreateRequestRequestedVolume=Volumen necesario
 CreateRequestRequestedWeight=Peso necesario
+MyRequests=Mis Pedidos
 
 #BrowseRequests
 NoRequestsAvailable=No hay pedidos disponibles.
@@ -146,7 +153,7 @@ NoRequestsAvailable=No hay pedidos disponibles.
 #profile
 Profile=Perfil
 
-#profile
+#login
 NewToTruckr=Nuevo en Truckr?
 SignUpNow= Registrate ahora
 ForgotPassword= Olvidaste tu contraseña?
@@ -158,6 +165,6 @@ Hazardous=Peligroso
 Normal=Normal
 Refrigerated=Refrigerado
 
-
-
-
+#MyTrips/MyRequests
+ActiveTrips=Viajes Activos
+AcceptedTrips=Viajes Aceptados
