--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -151,3 +151,7 @@ Hazardous=Hazardous
 Normal=Normal
 Refrigerated=Refrigerated
 
+#MyTrips/MyRequests
+ActiveTrips=Active Trips
+AcceptedTrips=Accepted Trips
+
