feat: mailing translations using spring message

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -164,3 +164,36 @@ Hazardous=Peligroso
 Normal=Normal
 Refrigerated=Refrigerado
 
+#Mailing
+#confirmationemail
+AccountConfirmation=Confirmación de Cuenta
+RegistrationComplete=Tu cuenta ha sido creada correctamente!
+ThankYouRegister=¡Gracias por registrarse a Truckr.com! 
+AccountDetails=Detalles de cuenta
+Username=Nombre de usuario: 
+PleaseConsider=Por favor, considere esto como un mail de confirmación. Si tiene alguna duda contactese a la siguiente casilla truckrconfirmation@gmail.com
+LookForward=¡Estamos entusiasmados por comenzar a trabajar juntos!
+StartBrowsing=Comience Ahora! >>
+
+#proposal
+
+PropTitle=¡Nueva Propuesta Disponible!
+PropPhrase1=Estimado/a 
+PropPhrase2=, ha recibido una nueva propuesta.
+PropDescription=Descripción(Escrita por el usuario)
+SeeProp=Ver propuestas
+
+#requestconfirmation
+
+ReqTitle=Se ha confirmado un pedido!
+ReqPhrase=Un pedido ha sido aceptado! 
+ReqDetails= DETALLES DEL PEDIDO
+ReqOrigin=Origen : 
+ReqDestination=Destino : 
+ReqDeparture=Fecha Salida / Hora : 
+ReqArrival=Fecha Llegada / Hora : 
+ReqPrice= Precio : 
+HappyTrucking= Enhorabuena!
+ViewDetails=Ver detalles >>
+
+
