feat: translations and manageItems fix

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -74,10 +74,11 @@ ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio 
 
 
 #common
-Name=Name
+Name=Nombre
 Cuit=Cuit/Cuil
 Email=Email
 Origin=Origen
+Role=Rol
 LicensePlate=Patente
 Destination=Destino
 DepartureDate=Fecha de salida
@@ -87,7 +88,10 @@ AvailableVolume=Volumen Disponible
 AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
-
+ProviderMessage=¡Soy proveedor! Voy a llenar los camiones de cargamento
+TruckerMessage=¡Soy camionero! Llevaré el cargamento solicitado
+ConfirmPassword=Confirmar Contraseña
+AlreadyUser=¿Ya tienes una cuenta?
 
 #browse.jsp
 OriginDestination=Origen - Destino
@@ -197,7 +201,12 @@ ReqPrice= Precio :
 HappyTrucking= Enhorabuena!
 ViewDetails=Ver detalles >>
 
+#register
+
+
 
 #MyTrips/MyRequests
 ActiveTrips=Viajes Activos
 AcceptedTrips=Viajes Aceptados
+
+
