--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -55,6 +55,11 @@ AvailableWeight=Avl. Weight
 Filters=Filters
 Driver=Driver
 Create=Create
+Role=Rol
+ProviderMessage=I'm a provider! I will fill the truck with my cargo
+TruckerMessage=I'm a trucker! I will take your cargo where you need
+ConfirmPassword=Confirm Password
+AlreadyUser=Already a user?
 
 
 #details.jsp
