--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -74,7 +74,7 @@ ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
 
 #common
-Name=Name
+Name=Nombre
 Cuit=Cuit/Cuil
 Email=Email
 Origin=Origen
@@ -87,7 +87,11 @@ AvailableVolume=Volumen Disponible
 AvailableWeight=Peso Disponible
 Filters=Filtros
 Driver=Conductor
-
+Role=Rol
+ProviderMessage=¡Soy proveedor! Voy a llenar los camiones de cargamento
+TruckerMessage=¡Soy camionero! Llevaré el cargamento solicitado
+ConfirmPassword=Confirmar Contraseña
+AlreadyUser=¿Ya tienes una cuenta?
 
 #browse.jsp
 OriginDestination=Origen - Destino
